--- a/.github/workflows/generate-recipe.yml
+++ b/.github/workflows/generate-recipe.yml
@@ -1,5 +1,9 @@
 name: Generate Recipe Page
 
+# grant this workflow push access to repo contents
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:
     inputs:
