--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6", 
+    "cloudscraper": "^1.2.68"
   }
 }
 
