--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "cloudscraper": "^4.6.0",
     "slugify": "^1.6.6"
   }
 }
-
