--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "name": "mc-recipe-clone",
   "version": "1.0.0",
   "scripts": {
-    "generate": "node scripts/scrapeRecipe.js"
+    "generate": "node scripts/scrapeRecipe.js",
+    "start": "node scripts/server.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "slugify": "^1.6.6", 
-    "cloudscraper": "^1.2.68"
+    "slugify": "^1.6.6",
+    "cloudscraper": "^1.2.68",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
