--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "slugify": "^1.6.6",
     "cloudscraper": "^1.2.68",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.21.2",
+    "puppeteer": "^24.7.2",
+    "slugify": "^1.6.6"
   }
 }
