--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "type": "module",
   "name": "mc-recipe-clone",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "generate": "node scripts/scrapeRecipe.js",
-    "start": "node scripts/server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "cloudscraper": "^1.2.68",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "puppeteer": "^24.7.2",
-    "slugify": "^1.6.6"
+    "next": "^14.0.0",
+    "puppeteer": "^21.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.0"
   }
 }
