--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "next": "^14.1.0",
-    "puppeteer": "^22.8.2",
+    "puppeteer-core": "^22.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sanitize-html": "^2.12.1",
+    "rate-limiter-flexible": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
