--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mc-recipe-clone",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,7 +15,8 @@
     "puppeteer-core": "^22.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanitize-html": "^2.12.1"
+    "sanitize-html": "^2.12.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
