--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "next": "14.1.0",
-    "puppeteer-core": "^22.8.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "13.4.19",
+    "puppeteer": "^21.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sanitize-html": "^2.12.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19"
   }
 }
