deploy new dependencies

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "next": "13.4.19",
-    "puppeteer": "^21.1.0",
+    "puppeteer": "^24.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanitize-html": "^2.12.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "eslint": "8.47.0",
+    "eslint": "^9.25.1",
     "eslint-config-next": "13.4.19"
   }
 }
