--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "sanitize-html": "^2.12.1",
     "slugify": "^1.6.6"
   },
-  "devDependencies": {
-    "eslint": "^9.25.1",
-    "eslint-config-next": "13.4.19"
-  }
+ "devDependencies": {
+  "eslint": "8.47.0",
+  "eslint-config-next": "13.4.19"
+}
 }
