--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "chrome-aws-lambda": "^10.1.0",
     "next": "13.4.19",
-    "puppeteer": "^21.11.0",
+    "puppeteer-core": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanitize-html": "^2.12.1",
